modify front page layout - needs two column layout

--- a/wordpress/wp-content/themes/vi-twentyeighteen/sass/components/_footer.scss
+++ b/wordpress/wp-content/themes/vi-twentyeighteen/sass/components/_footer.scss
@@ -1,3 +1,8 @@
+footer {
+    background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
+    padding: 1.5em;
+}
+
 .footer-text {
     color: white;
     font-weight: bolder;
