--- a/wordpress/wp-content/themes/vi-twentyeighteen/sass/objects/_grid.scss
+++ b/wordpress/wp-content/themes/vi-twentyeighteen/sass/objects/_grid.scss
@@ -18,11 +18,9 @@
 }
 
 .column-text {
-    padding: 1em 0;
+    padding: .5em 0;
     line-height: 20px;
 }
 
 .row {
-    background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
-    padding: 3em 2em;
 }
