--- a/wordpress/wp-content/themes/vi-twentyeighteen/sass/components/_header.scss
+++ b/wordpress/wp-content/themes/vi-twentyeighteen/sass/components/_header.scss
@@ -4,12 +4,8 @@
     width: 100%;
 }
 
-.banner img {
-    width: 100%;
-}
-
 .reference-name {
-    padding: .5em 1.5em;
+    padding: 0 1.5em;
 }
 
 
