--- a/wordpress/wp-content/themes/vi-twentyeighteen/sass/elements/_blockquote.scss
+++ b/wordpress/wp-content/themes/vi-twentyeighteen/sass/elements/_blockquote.scss
@@ -1,10 +1,10 @@
 blockquote {
-    padding: 1em;
+    padding: 0 1em;
     line-height: 30px;
     font-size: 25px;
     color: $vi-red;
 
     @media (min-width: $md) {
-        padding: 2em;
+        padding: 0 2em;
     }
 }
