--- a/wordpress/wp-content/themes/vi-twentyeighteen/sass/elements/_nav.scss
+++ b/wordpress/wp-content/themes/vi-twentyeighteen/sass/elements/_nav.scss
@@ -2,5 +2,5 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 1.5em;
+    padding: 1em 1.5em;
 }
